# efimirror

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  efimirror.spec  meson.build  meson.options
.github/workflows/: pre-commit.yaml
.obs/: workflows.yml
pkg/: efimirror.spec
rpm/: efimirror.spec
src/: functions.sh.in  sync.sh.in
src/conf/: efimirror.in
